--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,3 +19,12 @@
 body{
   margin: 0;
 }
+
+header{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
