--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  body {
+  .cont-body {
     background-color: white; /* Color de fondo en modo oscuro */
   }
 }
