--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -167,13 +167,17 @@
   gap: 3%;
 }
 
-.header button {
+.con-btns a {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   border: none;
   background-color: rgb(223, 223, 223);
   animation: btns 2s linear;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 
 @keyframes btns {
@@ -185,22 +189,22 @@
   }
 }
 
-.header button .cel {
+.con-btns a .cel {
   font-size: 1.3rem;
   color: rgb(0, 68, 255);
 }
 
-.header button .wss {
+.con-btns a .wss {
   font-size: 1.7rem;
   color: rgb(0, 68, 255);
 }
 
-.header button .mail {
+.con-btns a .mail {
   font-size: 1.5rem;
   color: rgb(0, 68, 255);
 }
 
-.header button:hover {
+.con-btns a:hover {
   background-color: rgb(0, 68, 255);
   cursor: pointer;
   .cel,
