--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -672,20 +672,20 @@
     height: 80px;
   }
 
-  .header button {
-    width: 50px;
-    height: 50px;
+  .header a {
+    width: 45px;
+    height: 45px;
   }
 
-  .header button .cel {
+  .header a .cel {
     font-size: 1.1rem;
   }
 
-  .header button .wss {
+  .header a .wss {
     font-size: 1.5rem;
   }
 
-  .header button .mail {
+  .header a .mail {
     font-size: 1.4rem;
   }
 
